# AudioVideoEncoding

./: .gitignore  Dockerfile  Lab1_QuantizationAndEntropyCoding_2023.ipynb
Audio/: quantized_matrix  speech_timedomain.mycodec
Cpp_template/src/: CMakeLists.txt  CustomComponent.cpp  CustomComponent.h  MainWindow.cpp  MainWindow.h  main.cpp
FFMPEG_Converter_Python/: ConverterComponents.py  FFMPEG_Functions.py  FileManager.py  LeftPanel.py  MultiMediaPlayer.py  Paths.py  RightPanel.py  SettingsManager.py  YoutubeComponents.py  main.py  styles.py
Video/: utils.py
Video/Lab1/: BW_Compressor.py  Image_Q_Reducer.py  JPG_Encoder.py  RGB_Translator.py  RL_Encoder.py  exercise2.py  exercise3.py  exercise4.py  exercise6.py  main.py  rgb_yuv.py  utils.py
Video/Lab2/: Chroma_Subsampler.py  Exercise_Importer.py  MP2_Converter.py  Resolution_Modifier.py  Video_Info.py  main.py  utils.py
Video/SP3/: README.txt  SP3_Scripts.py  main.py
Video/Seminar2/: MPEG.py  download_subs.py  extract_histogram.py  main.py  sintel.srt
Video/Videos/: bbb_9seconds_mkv (H.265)_1280x720.mkv  bbb_9seconds_mkv (H.265)_160x120-1.mkv  bbb_9seconds_mkv (H.265)_360x240.mkv  bbb_9seconds_mkv (H.265)_640x480.mkv  bbb_9seconds_webm (VP8)_1280x720.webm  bbb_9seconds_webm (VP8)_160x120.webm  bbb_9seconds_webm (VP8)_360x240.webm  bbb_9seconds_webm (VP8)_640x480.webm  bbb_9seconds_webm (VP9)_1280x720.webm  bbb_9seconds_webm (VP9)_160x120.webm  bbb_9seconds_webm (VP9)_360x240.webm  bbb_9seconds_webm (VP9)_640x480.webm  exam.txt
